poniendo seguridad prioritaria necesaria