@@ -1,75 +1,105 @@
 
 package com.ventas.config;
 
+import com.ventas.seguridad.JwtAuthFilter;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 /**
- * Configuración de Seguridad simplificada para desarrollo local.
- * Sin JWT, todas las rutas permitidas.
+ * Configuración de Seguridad para producción.
+ * JWT + Roles + BCrypt
  */
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity(prePostEnabled = true)
+@RequiredArgsConstructor
 public class SecurityConfig {
+
+    private final JwtAuthFilter jwtAuthFilter;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            // Deshabilitar CSRF
+            // Deshabilitar CSRF (JWT lo maneja)
             .csrf(csrf -> csrf.disable())
             
             // Configurar CORS
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             
-            // Permitir todas las peticiones sin autenticación
+            // Política de sesión stateless (JWT)
+            .sessionManagement(session -> session
+                .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+            )
+            
+            // Configurar autorización
             .authorizeHttpRequests(authz -> authz
-                .anyRequest().permitAll()
-            );
+                // Rutas públicas
+                .requestMatchers("/api/auth/**").permitAll()
+                .requestMatchers("/actuator/**").permitAll()
+                .requestMatchers("/swagger-ui/**", "/v3/api-docs/**").permitAll()
+                // Todas las demás requieren autenticación
+                .anyRequest().authenticated()
+            )
+            
+            // Agregar filtro JWT antes del filtro de autenticación
+            .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
+    }
+
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder(12); // Salt rounds 12 para producción
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // CONFIGURACIÓN RADICAL PARA DESARROLLO: Permitir TODO
-        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
+        // Orígenes permitidos (configurar según entorno)
+        String allowedOrigins = System.getenv("CORS_ALLOWED_ORIGINS");
+        if (allowedOrigins != null && !allowedOrigins.isEmpty()) {
+            configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        } else {
+            // Desarrollo local por defecto
+            configuration.setAllowedOrigins(List.of("http://localhost:3000"));
+        }
 
-        // TODOS los métodos HTTP
+        // Métodos HTTP permitidos
         configuration.setAllowedMethods(Arrays.asList(
-            "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD", "TRACE"
+            "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
         ));
 
-        // TODAS las cabeceras
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        // Headers permitidos
+        configuration.setAllowedHeaders(Arrays.asList(
+            "Authorization", "Content-Type", "X-Requested-With"
+        ));
 
-        // NO requerir credenciales (para evitar problemas de preflight)
-        configuration.setAllowCredentials(false);
+        // Permitir credenciales (necesario para cookies httpOnly)
+        configuration.setAllowCredentials(true);
 
         // Headers expuestos
         configuration.setExposedHeaders(Arrays.asList(
-            "Access-Control-Allow-Origin",
-            "Access-Control-Allow-Credentials",
-            "Access-Control-Allow-Methods",
-            "Access-Control-Allow-Headers"
+            "Authorization", "Content-Type"
         ));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-
-        // Configuración específica para endpoints públicos
-        source.registerCorsConfiguration("/api/auth/**", configuration);
-        source.registerCorsConfiguration("/actuator/**", configuration);
-        source.registerCorsConfiguration("/api/**", configuration); // Configuración permisiva para toda la API
-        source.registerCorsConfiguration("/**", configuration); // Backup para todo
+        source.registerCorsConfiguration("/**", configuration);
 
         return source;
     }
